--- a/install_apache.yml
+++ b/install_apache.yml
@@ -1,18 +1,12 @@
 ---
 - hosts: all
   become: true
-  tasks: 
+  tasks:
+    - name: Install Apache + PHP (Fedora)
+      ansible.builtin.command: dnf -y install {{ apache_package }} {{ php_package }}
+      when: ansible_facts['os_family'] == "RedHat"
 
-  - name: update repository index
-    ansible.builtin.apt:
-      update_cache: yes
-  
-  - name: install apache2 package
-    ansible.builtin.apt:
-      name: apache2
-      state: latest
-
-  - name: install support for php
-    ansible.builtin.apt:
-      name: libapache2-mod-php
-      state: latest
+    - name: Install Apache + PHP (Fedora)
+      ansible.builtin.command: >
+        dnf -y install {{ apache_package }} {{ php_package }}
+      when: ansible_facts['os_family'] == "RedHat"
